--- a/Interface/Default.css
+++ b/Interface/Default.css
@@ -61,13 +61,13 @@ h2
     text-decoration: solid;
     color: #ffd889;
     background-color: #09A071;
-    cursor: no-drop;
+    cursor: pointer;
 }
 
 #container
 {
     margin: 2% 2%;
-    /*display: inline-block;*/
+    padding-bottom: 3.5%;
     text-align: center;
 }
 
@@ -121,13 +121,19 @@ h2
 #footer
 {
     color: #007A58;
-    font-size: 80%;
+    font-size: 74%;
     font-weight: bold;
     text-align: right;
-    padding: 0.8%;
+    padding: 0.5%;
     margin-top: 1.5%;
     margin-bottom: 0%;
     background-color: #E2E1DE;
+
+    position: fixed;
+    width:  99%;
+    height: 4%;
+    bottom: 0%;
+    left: 0%;
 }
 
 #creditLink
