--- a/Interface/Default.css
+++ b/Interface/Default.css
@@ -1,6 +1,7 @@
 html, body, h1
 {
     margin: 0%;
+    background-color: rgb(252, 252, 252);
 }
 
 h1
@@ -10,7 +11,6 @@ h1
     text-align: center;
     color: white;
     background-color: #09A071;
-    margin: 0%;
     padding: 0.5% 1%;
 }
 
@@ -21,16 +21,113 @@ h2
     color: white;
     background-color: #54BD90;
     margin: 0%;
+    padding: 0%;
 }
 
-#homeIcon
+details
 {
-    width:  7%;
-    height: 7%;
-    z-index: 2;
-    position: absolute;
-    display: flex;
+    margin: 0.6% 0%;
+    padding: 0.5% 0%;
+    text-align: left;
+}
+
+summary
+{
+    margin: 0%;
+    padding: 0.4% 0.8%;
+    font-weight: bold;
+    color: white;
+    background-color: #09A071;
+}
+
+summary:hover
+{
+    color: #FEC95C;
+    cursor: pointer;
+}
+
+#quad
+{
+    background-color: rgb(240, 240, 240);
+    margin: 0%;
+    margin-bottom: 1%;
+    padding: 0%;
+}
+
+#workInProgress
+{
+    border: 1px solid #ccc;
+    border-radius: 4%;
+    box-shadow: 0 0 4px 0 #ccc;
     margin: 1%;
+}
+
+#container
+{
+    margin: 2% 2%;
+    padding-bottom: 2%;
+    text-align: center;
+}
+
+#searchBar
+{
+    width: 740px;
+    height: 50px;
+    margin: 0%;
+    padding: 0% 2%;
+    border-radius: 30px;
+    border: 1px solid #dcdcdc;
+    box-shadow: 1px 1px 4px 1px #dcdcdc;
+    font-size: 16px;
+}
+
+#searchBar:hover
+{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+}
+
+#searchBar:focus-within
+{
+    outline: none;
+    box-shadow: 1px 1px 10px 1px #dcdcdc;
+}
+
+#searchSelect:hover
+{
+    cursor: pointer;
+    color: #0cb47f;
+}
+
+#searchSelect option
+{
+    font-weight: 16px;
+    font-weight: 550;
+}
+
+#searchSelect:focus-within
+{
+    outline: none;
+}
+
+#searchButton
+{
+    width: 68px;
+    height: 49px;
+    margin-left: 0%;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    outline: none;
+    border: none;
+    color: whitesmoke;
+    font-weight: bolder;
+    background-color: #007A58;
+}
+
+#searchButton:hover
+{
+    cursor: pointer;
+    color: #FEC95C;
+    background-color: #09A071;
 }
 
 #button
@@ -64,13 +161,6 @@ h2
     cursor: pointer;
 }
 
-#container
-{
-    margin: 2% 2%;
-    padding-bottom: 3.5%;
-    text-align: center;
-}
-
 #box
 {
     width:  21%;
@@ -83,12 +173,12 @@ h2
     color: white;
     text-decoration: solid;
     background-color: #09A071;
-    box-shadow: 0px 0px 10px 0px #989898;
+    box-shadow: 0px 0px 10px 0px #aaaaaa;
 }
 
 #box:hover
 {
-    box-shadow: 0 0 20px 0 #FEC95C;
+    box-shadow: 0px 0px 20px 0px #FEC95C;
     border: 1px solid #FEC95C;
     color: #FEC95C;
     background-color: #0cb47f;
@@ -111,37 +201,154 @@ h2
     padding-bottom: 1%;
 }
 
-#noContent
-{
-    font-family: 'Bitstream Vera Sans', Verdana, Tahoma, 'Sans serif';
-    font-size: 102.6%;
-    font-weight: bolder;
-}
-
-#footer
+#creditText
 {
     color: #007A58;
-    font-size: 74%;
-    font-weight: bold;
-    text-align: right;
-    padding: 0.5%;
-    margin-top: 1.5%;
-    margin-bottom: 0%;
-    background-color: #E2E1DE;
-
-    position: fixed;
-    width:  99%;
-    height: 4%;
-    bottom: 0%;
-    left: 0%;
+    text-decoration: solid;
 }
 
-#creditLink
-{
-    color: #007A58;
-}
-
-#creditLink:hover
+#creditText:hover
 {
     color: #54BD90;
+}
+
+/* ========== Deskop (1920x1080) ========== */
+@media (width >= 1920px)
+{
+    #homeIcon
+    {
+        height: 4.5%;
+        z-index: 2;
+        position: absolute;
+        display: flex;
+        margin: 1%;
+    }
+
+    #searchHeader
+    {
+        padding-top: 10%;
+        padding-bottom: 4%;
+    }
+
+    #searchSelect
+    {    
+        margin-left: -8.4%;
+        margin-right: 0%;
+        border: none;
+        color: #007A58;
+        font-size: 16px;
+        font-weight: 550;
+    }
+
+    #footer
+    {
+        color: #007A58;
+        font-size: 86%;
+        font-weight: bold;
+        text-align: right;
+        padding: 0.5%;
+        margin-top: 1.5%;
+        margin-bottom: 0%;
+        background-color: #E2E1DE;
+        box-shadow: 1px 1px 2px 1px rgb(80, 80, 80);
+        position: fixed;
+        width:  99%;
+        height: 1.6%;
+        bottom: 0%;
+        left: 0%;
+    }
+}
+
+/* ========== Deskop (1600x900) ========== */
+@media (width >= 1600px) and (width < 1680)
+{
+    #homeIcon
+    {
+        height: 5.7%;
+        z-index: 2;
+        position: absolute;
+        display: flex;
+        margin: 1%;
+    }
+
+    #searchHeader
+    {
+        padding-top: 10%;
+        padding-bottom: 4%;
+    }
+
+    #searchSelect
+    {    
+        margin-left: -10%;
+        margin-right: 0%;
+        border: none;
+        color: #007A58;
+        font-size: 16px;
+        font-weight: 550;
+    }
+
+    #footer
+    {
+        color: #007A58;
+        font-size: 74%;
+        font-weight: bold;
+        text-align: right;
+        padding: 0.5%;
+        margin-top: 1.5%;
+        margin-bottom: 0%;
+        background-color: #E2E1DE;
+        box-shadow: 1px 1px 2px 1px rgb(80, 80, 80);
+        position: fixed;
+        width:  99%;
+        height: 3.5%;
+        bottom: 0%;
+        left: 0%;
+    }
+}
+
+/* ========== Deskop (1280x720) ========== */
+@media (width >= 1360px) and (width < 1600px)
+{
+    #homeIcon
+    {
+        height: 7%;
+        z-index: 2;
+        position: absolute;
+        display: flex;
+        margin: 1%;
+    }
+
+    #searchHeader
+    {
+        padding-top: 8%;
+        padding-bottom: 6%;
+    }
+
+    #searchSelect
+    {    
+        margin-left: -11.4%;
+        margin-right: 0%;
+        border: none;
+        color: #007A58;
+        font-size: 16px;
+        font-weight: 550;
+    }
+    
+    #footer
+    {
+        color: #007A58;
+        font-size: 74%;
+        font-weight: bold;
+        text-align: right;
+        padding: 0.5%;
+        margin-top: 1.5%;
+        margin-bottom: 0%;
+        background-color: #E2E1DE;
+        box-shadow: 1px 1px 2px 1px rgb(80, 80, 80);
+        position: fixed;
+        width:  99%;
+        height: 2.5%;
+        bottom: 0%;
+        left: 0%;
+    }
 }
